--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,26 @@
 Package: readsim
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
+Title: Read and Combine Simulation Data Files
+Version: 1.0.0
 Authors@R: c(
     person(
-      "Jane", "Doe",
-      email = "jane@example.com",
+      "Rapha\"{e}l", "Scherrer",
+      email = "raphael.scherrer@evobio.eu",
       role = c("aut", "cre")
     )
   )
-Description: More about what it does (maybe more than one line).
-    Continuation lines should be indented.
-License: What license is it under?
+Description: This package handles modular simulation data from saved files,
+    and simplifies their combination into tables ready for analysis.
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.3.1
+Roxygen: list(markdown = TRUE)
+Imports:
+    tibble (>= 3.1.0)
+Suggests: 
+    knitr (>= 1.49),
+    rmarkdown (>= 2.25),
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+License: MIT + file LICENSE
+VignetteBuilder: knitr
